Detect brokerage account based on partial name

The detection of a brokerage account connected to an investment account
did not work if the brokerage account was not a top-level account
(sub-account of Asset or Liability).

This change allows to locate the brokerage account based on its name in
any hierarchical level of the account structure.

BUG: 350360
FIXED-IN: 5.0.9